--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "joi": "^17.9.2",
+    "@hookform/resolvers": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
